--- a/nym-vpn-android/app/src/main/res/values/themes.xml
+++ b/nym-vpn-android/app/src/main/res/values/themes.xml
@@ -3,15 +3,6 @@
 
     <style name="Theme.NymVPN" parent="Theme.AppCompat.NoActionBar">
 		<item name="android:fontFamily">@font/lato</item>
+		<item name="android:windowIsTranslucent">true</item>
 	</style>
-
-    <style name="Theme.AppSplashScreen" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/white</item>
-        <!-- icon has to be a circle -->
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
-        <item name="windowSplashScreenAnimationDuration">500</item>
-        <item name="postSplashScreenTheme">@style/Theme.NymVPN</item>
-        <item name="android:windowSplashScreenBehavior" tools:targetApi="tiramisu">icon_preferred
-        </item>
-    </style>
 </resources>
