feat: add ui updates

--- a/nym-vpn-android/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/nym-vpn-android/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,14 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
-  <group android:scaleX="0.66"
-      android:scaleY="0.66"
-      android:translateX="174.08"
-      android:translateY="174.08">
+    android:viewportWidth="173"
+    android:viewportHeight="46">
+  <group android:scaleX="0.5"
+      android:scaleY="0.13294798"
+      android:translateX="43.25"
+      android:translateY="19.942196">
     <path
-        android:pathData="M266.5,792C182.8,727.2 167.2,606.8 232,523.1C296.8,439.4 417.2,423.9 500.9,488.7C584.6,553.4 600.1,673.9 535.3,757.5C470.6,841.2 350.1,856.8 266.5,792ZM752.2,657.3C858.6,550.8 858.6,378.3 752.2,271.8C645.7,165.4 472.9,165.4 366.7,271.8C260.5,378.3 260.2,550.8 366.7,657.3C473.2,763.8 645.7,763.8 752.2,657.3Z"
-        android:fillColor="#FB6E4E"/>
+        android:pathData="M0,4.29C0,1.92 1.96,0 4.39,0H20.36C23.2,0 25.69,1.87 26.42,4.55L36.62,41.94C36.81,42.63 37.86,42.5 37.86,41.78V0H50.39V41.71C50.39,44.08 48.43,46 46.01,46H29.91C27.08,46 24.6,44.14 23.86,41.47L13.77,4.96C13.58,4.27 12.54,4.41 12.54,5.12V46H0V4.29Z"
+        android:fillColor="#14E76F"/>
+    <path
+        android:pathData="M108.43,0C106.01,0 104.05,1.92 104.05,4.29V46H116.58V5.14C116.58,4.4 117.68,4.29 117.83,5.02L125.12,41.06C125.71,43.93 128.28,46 131.27,46L145.9,46C148.89,46 151.47,43.92 152.05,41.04L159.22,5.11C159.37,4.38 160.46,4.49 160.46,5.23V46H173V4.29C173,1.92 171.04,0 168.61,0L153.1,0C150.12,0 147.56,2.04 146.96,4.89L139.14,41.94C139,42.6 138.05,42.6 137.91,41.94L130.16,4.9C129.57,2.05 127,0 124.02,0L108.43,0Z"
+        android:fillColor="#14E76F"/>
+    <path
+        android:pathData="M51.87,0H65.15L76.62,23.99C77.07,24.93 78.44,24.93 78.89,23.99L90.29,0H103.81L81.83,46H68.34L77.1,27.6H69.06C66.63,27.6 64.41,26.22 63.38,24.07L51.87,0Z"
+        android:fillColor="#14E76F"/>
   </group>
 </vector>
