--- a/nym-vpn-android/app/src/main/res/values/ic_launcher_background.xml
+++ b/nym-vpn-android/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#242B2D</color>
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
